Perf: Optimize image loading and rendering performance

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       property="og:description"
       content="Computer vision researcher at Lightricks, focusing on generative models. Previously at Microsoft and Mobileye. M.Sc. graduate from Hebrew University."
     />
-    <meta property="og:image" content="/images/portrait_nir.png" />
+    <meta property="og:image" content="/images/portraits/portrait_nir.png" />
     <meta property="og:site_name" content="Nir Zabari" />
     <meta property="og:locale" content="en_US" />
 
@@ -132,7 +132,10 @@
       property="twitter:description"
       content="Computer vision researcher at Lightricks, focusing on generative models. Previously at Microsoft and Mobileye. M.Sc. graduate from Hebrew University."
     />
-    <meta property="twitter:image" content="/images/portrait_nir.png" />
+    <meta
+      property="twitter:image"
+      content="/images/portraits/portrait_nir.png"
+    />
 
     <!-- Mobile/Apple Specific -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -146,6 +149,9 @@
     <!-- Preconnect to External Resources -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://images.unsplash.com" />
+
+    <!-- Preload Critical Images -->
+    <link rel="preload" as="image" href="/images/portraits/portrait_nir.png" />
 
     <!-- Security -->
     <meta
