Add Google site verification file and meta tag

--- a/index.html
+++ b/index.html
@@ -105,6 +105,10 @@
     <!-- Robots and Indexing -->
     <meta name="robots" content="index, follow" />
     <meta name="googlebot" content="index, follow" />
+    <meta
+      name="google-site-verification"
+      content="y_owRpzcw6oxAY4k0pyAcGPz2mZnQL5N_omlQ0SDek8"
+    />
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
