Update content and add new photography

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
     </style>
 
     <!-- Primary Meta Tags -->
-    <title>Nir Zabari - Computer Vision Researcher & AI Engineer</title>
+    <title>Nir Zabari - AI Research Engineer</title>
     <meta
       name="description"
       content="Nir Zabari is a Computer Vision Researcher at Lightricks, specializing in generative models. Previously at Microsoft and Mobileye. M.Sc. graduate from Hebrew University."
@@ -161,7 +161,7 @@
     <meta property="og:url" content="https://nirzabari.github.io/" />
     <meta
       property="og:title"
-      content="Nir Zabari - Computer Vision Researcher & AI Engineer"
+      content="Nir Zabari - AI Research Engineer"
     />
     <meta
       property="og:description"
@@ -176,7 +176,7 @@
     <meta property="twitter:url" content="https://nirzabari.github.io/" />
     <meta
       property="twitter:title"
-      content="Nir Zabari - Computer Vision Researcher & AI Engineer"
+      content="Nir Zabari - AI Research Engineer"
     />
     <meta
       property="twitter:description"
